--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Gemini Assistant",
-  "version": "1.0",
+  "version": "1.1",
   "description": "A quick-access assistant powered by the Gemini API",
   "permissions": ["storage", "activeTab", "scripting"],
   "host_permissions": ["https://generativelanguage.googleapis.com/"],
@@ -25,6 +25,10 @@
     "toggle-extension": {
       "suggested_key": { "default": "Ctrl+Shift+K", "mac": "Command+Shift+K" },
       "description": "Show/Hide the Gemini Assistant"
+    },
+    "toggle-and-focus": {
+      "suggested_key": { "default": "Ctrl+Space", "mac": "Command+Space" },
+      "description": "Show/Hide and focus the Gemini Assistant"
     },
     "reset-chat": {
       "suggested_key": { "default": "Alt+R", "mac": "Alt+R" },
