--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Gemini Assistant",
-  "version": "1.1",
+  "version": "1.2.1",
   "description": "A quick-access assistant powered by the Gemini API",
   "permissions": ["storage", "activeTab", "scripting"],
   "host_permissions": ["https://generativelanguage.googleapis.com/"],
@@ -17,15 +17,11 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["assets/content.css"],
+      "resources": ["assets/content.css", "assets/reset-icon.svg"],
       "matches": ["<all_urls>"]
     }
   ],
   "commands": {
-    "toggle-extension": {
-      "suggested_key": { "default": "Ctrl+Shift+K", "mac": "Command+Shift+K" },
-      "description": "Show/Hide the Gemini Assistant"
-    },
     "toggle-and-focus": {
       "suggested_key": { "default": "Ctrl+Space", "mac": "Command+Space" },
       "description": "Show/Hide and focus the Gemini Assistant"
@@ -33,6 +29,14 @@
     "reset-chat": {
       "suggested_key": { "default": "Alt+R", "mac": "Alt+R" },
       "description": "Reset the chat input"
+    },
+    "reset-position": {
+      "suggested_key": { "default": "Alt+Shift+R", "mac": "Alt+Shift+R" },
+      "description": "Reset window to default position"
+    },
+    "toggle-transparency": {
+      "suggested_key": { "default": "Alt+Shift+T", "mac": "Alt+Shift+T" },
+      "description": "Toggle window transparency"
     }
   },
   "action": {
